# Cpp-OpenCV-course

./: CMakeLists.txt  Ex1.cpp  readme.md
Ex2/: Ex2.cpp  input_file_ex2
Sub_ex_3/: Color_header_file.h  Sub_ex_3.cpp
